progress/refactor  - added log support; fixed errors